--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
         <!-- Social Media Links -->
         <div class="social-buttons">
-            <a href="https://www.instagram.com/heart_hacker_g?utm_source=qr&igsh=MXIxaWF1b2pzZWE3bQ==" target="_blank" title="Instagram">
+            <a href="https://www.instagram.com/_heart_hacker__g?igsh=MXIxaWF1b2pzZWE3bQ==" target="_blank" title="Instagram">
                 <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
             </a>
             <a href="mailto:g7463408@gmail.com" title="Email">
