--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </div>
 
         <!-- Resume Download Button -->
-        <a href="./DIVYAKRISHNAN.pdf" class="download-btn" download>Download Resume</a>
+        <a href="gokul.pdf" class="download-btn" download>Download Resume</a>
     </div>
 
     <div class="skills">
