--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <body>
 
     <div class="profile-card">
-        <img src="./MYIMAGE.jpg" alt="Gokul G" class="profile-img">
+        <img src="gokul.jpg" alt="Gokul G" class="profile-img">
         <h1>Gokul G</h1>
         <p>
             I am Gokul G<br>
